--- a/Ndn.html
+++ b/Ndn.html
@@ -1,24 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nível de Nerdice (Ndn)</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f0f0f0;
+        }
+        form {
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            width: 100%;
+            max-width: 400px;
+        }
+        input[type="number"] {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border-radius: 5px;
+            border: 1px solid #ddd;
+            box-sizing: border-box; /* Adds padding inside the box */
+        }
+        button {
+            width: 100%;
+            padding: 10px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #0056b3;
+        }
+        #resultado {
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
-    <h2>Calcule seu Nível de Nerdice (Ndn)</h2>
     <form id="nerdForm">
         <input type="number" id="tn" placeholder="Tempo Nerd (TN) em horas" required><br>
         <input type="number" id="nppc" placeholder="Número de Pessoas que você Pegou Casualmente (NPPC)" required><br>
         <input type="number" id="idade" placeholder="Idade" required><br>
-        <input type="number" id="pf" placeholder="Porcentagem para Ficção (F)"><br>
-        <input type="number" id="pc" placeholder="Porcentagem para Ciência (C)"><br>
-        <input type="number" id="pm" placeholder="Porcentagem para Matemática (M)"><br>
-        <input type="number" id="ph" placeholder="Porcentagem para Humanas (H)"><br>
-        <input type="number" id="pj" placeholder="Porcentagem para Jogos (J)"><br>
+        <input type="number" id="pf" placeholder="Porcentagem para Ficção (F)" required><br>
+        <input type="number" id="pc" placeholder="Porcentagem para Ciência (C)" required><br>
+        <input type="number" id="pm" placeholder="Porcentagem para Matemática (M)" required><br>
+        <input type="number" id="ph" placeholder="Porcentagem para Humanas (H)" required><br>
+        <input type="number" id="pj" placeholder="Porcentagem para Jogos (J)" required><br>
         <button type="button" onclick="calcularNdn()">Calcular Ndn</button>
+        <p id="resultado"></p>
     </form>
-    <p id="resultado"></p>
 
     <script>
         function calcularNdn() {
@@ -35,7 +76,7 @@
             const somaPorcentagens = pf + pc + pm + ph + pj;
             if (somaPorcentagens !== 100) {
                 document.getElementById('resultado').textContent = "Ndn: ∅ (A soma das porcentagens deve ser igual a 100.)";
-                return; // Interrompe a execução da função
+                return;
             }
 
             // Cálculo de tempos dedicados a cada categoria
@@ -54,8 +95,9 @@
             // Cálculo do Ndn
             const ndn = Math.log(tn / (((1 + nppc) ** 2 / idade) * (1 / (1 + vcn))));
 
-            document.getElementById('resultado').textContent = Ndn: ${ndn.toFixed(2)};
+            document.getElementById('resultado').textContent = `Ndn: ${ndn.toFixed(2)}`;
         }
     </script>
 </body>
 </html>
+
